--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem vindo novamente. Faça login novamente para acessar a sua conta.</p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
                         <input type="email" name="lo
-                        " id="ilogin" placeholder="seu e-mail">
+                        " id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
                     <div class="campo">
                         <span class="material-icons">vpn_key</span>
-                        <input type="password" name="Senha" id="isenha" placeholder="sua senha">
+                        <input type="password" name="Senha" id="isenha" placeholder="sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
