--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
-                        <input type="email" name="lo
+                        <input type="email" name="login
                         " id="ilogin" placeholder="seu e-mail" autocomplete="email" required maxlength="30">
                         <label for="ilogin">Login</label>
                     </div>
@@ -31,7 +31,7 @@
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
-                    <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                    <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
                 </form>
             </div>
         </section>
