--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <div id="imagens">
             </div>
             <div id="formulario">
-                <h1>Login</h1>
-                <p>Seja bem vindo novamente. Faça login novamente para acessar a sua conta.</p>
+                <h1>Angelo Albini</h1>
+                <p>Seja bem vindo ao meu site Angelo Albini. Faça login novamente para acessar a sua conta.</p>
                 <form action="login.php" method="post" autocomplete="on">
                     <div class="campo">
                         <span class="material-icons">person</span>
